# crud-users-serverless

./: .gitignore  package-lock.json  package.json  pyproject.toml  serverless.yml
createUsers/: handler.js
deleteUsers/: handler.py
getUsers/: handler.js
tests/: requests.org
updateUsers/: handler.js
